--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  kartal: ^2.7.0
-
+  kartal:
 dev_dependencies:
   flutter_test:
     sdk: flutter
